06-canary-istio/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
      version: v1
  template:
    metadata:
      labels:
        app: sample-app
        version: v1
    spec:
      containers:
        - name: sample-app
          image: hashicorp/http-echo
          args:
            - "-text=v1"
          ports:
            - containerPort: 5678
