06-canary-istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sample-app-bluegreen
spec:
  hosts:
    - "*"
  gateways:
    - sample-app-gateway
  http:
    - route:
        - destination:
            host: sample-app
            subset: v1
            port:
              number: 80
          weight: 0
        - destination:
            host: sample-app
            subset: v2
            port:
              number: 80
          weight: 100
